# i_seed_drone_onboard

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.rst  api_code.cpp  api_code.h  battery_monitor_main.cpp  boost_assert.cpp  bounding_box.cpp  bounding_box.h  camera.cpp  camera.h  camera_psdk.cpp  camera_psdk.h  channel.cpp  channel.h  check_format.sh  condition_flag.cpp  condition_flag.h  convert_main.cpp  converter.cpp  converter.h  converter_ut.cpp  detect_test_usage.rst  detection_result.h  dji_linux_helpers.hpp  drone.cpp  drone.h  drone_start_checklist.rst  flight_test_usage.rst  focal_length_monitor_job.cpp  geoid.rst  h20_gimbal_angles.rst  home_altitude.cpp  home_altitude.h  home_altitude_ut.cpp  i_seed_drone_onboard.service  i_seed_drone_onboard_core_ut.cpp  inference.cpp  (+65 more)
.github/workflows/: ci.yml
cmake/: jetson_toolchain.cmake
cmake/cache/: __add_cache_path.cmake  ci_clang.cmake  ci_gcc.cmake  ci_jetson_cross.cmake  ci_jetson_cross_sim_interconnection.cmake  ci_jetson_cross_sim_only.cmake  jetson_cross_local.cmake  jetson_gcc.cmake  local_clang.cmake  local_gcc.cmake
data/: step_5_igrf_grid_data.json
docs/: annotated.html  classapi__code-members.html  classapi__code.html  classbounding__box-members.html  classbounding__box.html  classcamera-members.html  classcamera.html  classcamera_a01b37a8f34e5b66cb84ff414c85cf8e9_cgraph.map  classcamera_a01b37a8f34e5b66cb84ff414c85cf8e9_cgraph.md5  classchannel-members.html  classchannel.html  classchannel_a11ca1b45d263aaa2d2ec703801f9598c_cgraph.map  classchannel_a11ca1b45d263aaa2d2ec703801f9598c_cgraph.md5  classcondition__flag-members.html  classcondition__flag.html  classcondition__flag_a48bc98ac3f301d848ae8b4a5264bd68e_icgraph.map  classcondition__flag_a48bc98ac3f301d848ae8b4a5264bd68e_icgraph.md5  classcondition__flag_aea1a8743c3380743110267ebc3adc453_cgraph.md5  classcondition__flag_aea1a8743c3380743110267ebc3adc453_icgraph.map  classcondition__flag_aea1a8743c3380743110267ebc3adc453_icgraph.md5  classconverter-members.html  classconverter.html  classdrone-members.html  classdrone.html  classdrone_af1f1e7a230a184ecd3747f80c9692940_cgraph.map  classdrone_af1f1e7a230a184ecd3747f80c9692940_cgraph.md5  classes.html  classhome__altitude-members.html  classhome__altitude.html  classhome__altitude_a56b1c387ca09f53586b83f77e1f27855_cgraph.map  classhome__altitude_a56b1c387ca09f53586b83f77e1f27855_cgraph.md5  classhome__altitude_a6a40f0e2c9aeaec322b7e0e179bc3337_icgraph.map  classhome__altitude_a6a40f0e2c9aeaec322b7e0e179bc3337_icgraph.md5  classhome__altitude_aa8b6ba1265d546cf272f0b3a1c6c873c_icgraph.map  classhome__altitude_aa8b6ba1265d546cf272f0b3a1c6c873c_icgraph.md5  classinference-members.html  classinference.html  classinference_a3b13d1908e9244cfa5da484f131d61a6_cgraph.map  classinference_a3b13d1908e9244cfa5da484f131d61a6_cgraph.md5  classinference_ace0e2a040196a21a09e76fe4dcd663cf_cgraph.map  (+232 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  (+48 more)
java/interconnection/: Interconnection.java
